# gates

./: .env.example  .gitignore  AGENTS.md  DECISIONS.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
apps/dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/dashboard/src/: App.tsx
docs/: guide.md  index.md
docs/concepts/: how-it-works.md
docs/deployment/: docker.md
docs/guides/: api-keys.md  mfa.md  oauth.md  organizations.md  passkeys.md  sessions.md  users.md  webhooks.md
docs/quickstarts/: express.md  nextjs.md  nuxt.md  python.md  react.md  remix.md  sveltekit.md  vue.md
docs/security/: rate-limiting.md
migrations/: env.py
migrations/versions/: 0001_create_initial_tables.py  0002_create_sessions_table.py  0003_create_webhook_tables.py  0004_create_api_key_table.py  0005_create_verification_table.py  0006_create_phone_number_table.py  0007_create_external_account_table.py  0008_create_mfa_tables.py  0009_create_passkey_table.py  0010_create_organization_tables.py  0011_create_sso_tables.py  0012_create_blocklist_table.py  0013_create_oauth_application_tables.py  0014_create_jwt_template_table.py
planning/: cost-strategy.md
sdks/nextjs/: package.json  tsconfig.json
sdks/nextjs/src/: index.ts
sdks/react/: package.json  tsconfig.json
sdks/react/src/: context.tsx  index.ts  types.ts
src/gates/: config.py  main.py
src/gates/api/: hosted.py
src/gates/core/: audit.py  auth.py  cache.py  captcha.py  clock.py  crypto.py  email.py  errors.py  instance.py  middleware.py  permissions.py  ratelimit.py  security.py  sms.py  utils.py
tests/: conftest.py  test_core.py  test_health.py  test_mfa.py  test_session_tokens.py  test_verifications.py  test_webhooks.py
(+100 files in other folders)
